TITLEタグを変更

--- a/check/blob.html
+++ b/check/blob.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8" />
-  <title>Download Test 1</title>
-  <script src="blob.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <title>アサヒ DL</title>
+    <script src="blob.js"></script>
 </head>
 <body>
-  <p><button id="button1">Download Text</button></p>
+  <p><button id="button1">CSVファイルをダウンロードする</button></p>
 </body>
 </html>
