--- a/check/open_file.html
+++ b/check/open_file.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title>HTML5 TIPS</title>
+<title>アサヒ OP</title>
 <script>
 window.addEventListener('DOMContentLoaded', function() {
 // ファイルが指定されたタイミングで、その内容を表示
