リンク切れ修正、viewport設定

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app">
-        <p><a href="check/blog.html">指示データのダウンロード</a></p>
+        <p><a href="check/blob.html">指示データのダウンロード</a></p>
         <p><a href="check/open_file.html">ダウンロードした指示データの読み込み</a></p>
      </div>
 
