--- a/check/blob.html
+++ b/check/blob.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>アサヒ DL</title>
     <script src="blob.js"></script>
 </head>
