TOPに戻るリンクを設置

--- a/check/blob.html
+++ b/check/blob.html
@@ -8,5 +8,8 @@
 </head>
 <body>
   <p><button id="button1">CSVファイルをダウンロードする</button></p>
+  <hr />
+
+  <a href="/index.html">TOPに戻る</a>
 </body>
 </html>
