--- a/check/open_file.html
+++ b/check/open_file.html
@@ -1,36 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>アサヒ OP</title>
-<script>
-window.addEventListener('DOMContentLoaded', function() {
-// ファイルが指定されたタイミングで、その内容を表示
-document.querySelector("#file").addEventListener('change', function(e) {
-    // File APIを利用できるかをチェック
-    if (window.File) {
-      // 指定されたファイルを取得
-      var input = document.querySelector('#file').files[0];
-      // ファイル読み込みの準備（1）
-      var reader = new FileReader();
-      // ファイルの読み込みに成功したら、その内容を<div id="result">に反映（2）
-      reader.addEventListener('load', function(e) {
-        var output = reader.result.replace(/(\n|\r)/g, '<br />');
-        document.querySelector("#result").innerHTML = output;
-      }, true);
-      // ファイルの内容をテキストとして取得（3）
-      reader.readAsText(input, 'UTF-8');
-    }
-  }, true);
-});
-</script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>アサヒ OP</title>
+  <script>
+  window.addEventListener('DOMContentLoaded', function() {
+  // ファイルが指定されたタイミングで、その内容を表示
+  document.querySelector("#file").addEventListener('change', function(e) {
+      // File APIを利用できるかをチェック
+      if (window.File) {
+        // 指定されたファイルを取得
+        var input = document.querySelector('#file').files[0];
+        // ファイル読み込みの準備（1）
+        var reader = new FileReader();
+        // ファイルの読み込みに成功したら、その内容を<div id="result">に反映（2）
+        reader.addEventListener('load', function(e) {
+          var output = reader.result.replace(/(\n|\r)/g, '<br />');
+          document.querySelector("#result").innerHTML = output;
+        }, true);
+        // ファイルの内容をテキストとして取得（3）
+        reader.readAsText(input, 'UTF-8');
+      }
+    }, true);
+  });
+  </script>
 </head>
 <body>
-ファイル：
-<input id="file" name="file" type="file" />
-<hr />
-<!--読み込み結果を反映する場所を用意-->
-<div id="result"></div>
+  スマホ本体に保存したファイルを開きます。
+  Wi-Fiの外でも動作することを確認するために、
+  機内モードにしてください。
+  ファイル：
+  <input id="file" name="file" type="file" />
+  <hr />
+
+  <!--読み込み結果を反映する場所を用意-->
+  <div id="result"></div>
+  <hr />
+
+  <a href="/index.html">TOPに戻る</a>
 </body>
 </html>
