--- a/check/download-csv.html
+++ b/check/download-csv.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>アサヒ DL</title>
-    <script src="blob.js"></script>
+    <title>入庫実績CSVファイルをダウンロード</title>
+    <script src="download-csv.js"></script>
 </head>
 <body>
-  <p><button id="button1">CSVファイルをダウンロードする</button></p>
+  <p><button id="button1">ダウンロード</button></p>
   <hr />
 
   <a href="/index.html">TOPに戻る</a>
