--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div id="app">
-        <p><a href="check/blob.html">指示データのダウンロード</a></p>
-        <p><a href="check/open_file.html">ダウンロードした指示データの読み込み</a></p>
+        <p><a href="check/open_file.html">ダウンロードした入庫指示CSVファイルの読み込み</a></p>
+        <p><a href="check/download-csv.html">入庫実績CSVファイルのダウンロード</a></p>
      </div>
 
     <script>
