--- a/check/download-csv.html
+++ b/check/download-csv.html
@@ -7,6 +7,8 @@
     <script src="download-csv.js"></script>
 </head>
 <body>
+  スマホ本体にCSVファイルを保存します。
+  事前にWi-Fi、またはモバイルネットワークに接続してください。
   <p><button id="button1">ダウンロード</button></p>
   <hr />
 
