--- a/barcode/sample.html
+++ b/barcode/sample.html
@@ -47,30 +47,78 @@ function nextfeild2(str,len,timesEnterTab){
 				<div class="m-tbl">
 					<table class="tmTable tmMargL15px">
 					<tbody>
-          <tr><th>取消</th><th>No.</th><th>JAN</th><th>名称</th><th>数量</th><th>うち不良数量</th><th>日時</th></tr>
+          <tr><th>取消</th><th>No.<br>(連番を自動表示)</th><th>JAN<br>(桁数＝13)</th><th>名称<br>(マスタから自動表示)</th><th>数量<br>(桁数＝5)</th><th>うち不良数量<br>(桁数＝5)</th><th>日時<br>(入力時現在の日時を表示)</th></tr>
+
           <tr>
             <td>
-              <input id="deleted" name="deleted" type="checkbox" value="1" onclick="nextfeild2(this,1)">
+              <input id="deleted" name="deleted" type="checkbox" value="0" onclick="nextfeild2(this,1)">
             </td>
             <td>
-              <input id="product_id" name="product_id" type="text" maxlength="13" size="20" onkeyup="nextfeild2(this,13)">　（桁数＝13）
+              <input id="sequence" name="sequence" type="number" maxlength="10" size="10" value="1" readonly="readonly">
             </td>
             <td>
-              <input id="product_name" name="product_name" type="text" size="40" readonly="readonly">(品目の名称を表示)
+              <input id="product_id" name="product_id" type="text" maxlength="13" size="20" onkeyup="nextfeild2(this,13)">
             </td>
             <td>
-              <input id="value" name="value" type="text" type="number" maxlength="5" size="10" onkeyup="nextfeild2(this,5,3)">　（桁数＝5）<br>
+              <input id="product_name" name="product_name" type="text" size="40" readonly="readonly">
             </td>
             <td>
-              <input id="value_defective" name="value_defective" type="text" type="number" maxlength="5" size="10" onkeyup="nextfeild2(this,5,2)">　（桁数＝5）<br>
+              <input id="value" name="value" type="text" type="number" maxlength="5" size="10" onkeyup="nextfeild2(this,5,3)">
             </td>
             <td>
-              <input id="created" name="created" type="text" size="20" readonly="readonly">(入力時現在の日時を表示)
+              <input id="value_defective" name="value_defective" type="text" type="number" maxlength="5" size="10" onkeyup="nextfeild2(this,5,2)">
             </td>
+            <td>
+              <input id="created" name="created" type="text" size="20" value="2021-09-02 10:15:11" readonly="readonly">
+            </td>
+          </tr>
 
-					</tr>
-
-
+          <tr>
+            <td>
+              <input id="deleted" name="deleted" type="checkbox" value="0" onclick="nextfeild2(this,1)">
+            </td>
+            <td>
+              <input id="sequence" name="sequence" type="number" maxlength="10" size="10" value="2" readonly="readonly">
+            </td>
+            <td>
+              <input id="product_id" name="product_id" type="text" maxlength="13" size="20" onkeyup="nextfeild2(this,13)">
+            </td>
+            <td>
+              <input id="product_name" name="product_name" type="text" size="40" readonly="readonly">
+            </td>
+            <td>
+              <input id="value" name="value" type="text" type="number" maxlength="5" size="10" onkeyup="nextfeild2(this,5,3)">
+            </td>
+            <td>
+              <input id="value_defective" name="value_defective" type="text" type="number" maxlength="5" size="10" onkeyup="nextfeild2(this,5,2)">
+            </td>
+            <td>
+              <input id="created" name="created" type="text" size="20" value="2021-09-02 10:17:30" readonly="readonly">
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <input id="deleted" name="deleted" type="checkbox" value="0" onclick="nextfeild2(this,1)">
+            </td>
+            <td>
+              <input id="sequence" name="sequence" type="number" maxlength="10" size="10" value="3" readonly="readonly">
+            </td>
+            <td>
+              <input id="product_id" name="product_id" type="text" maxlength="13" size="20" onkeyup="nextfeild2(this,13)">
+            </td>
+            <td>
+              <input id="product_name" name="product_name" type="text" size="40" readonly="readonly">
+            </td>
+            <td>
+              <input id="value" name="value" type="text" type="number" maxlength="5" size="10" onkeyup="nextfeild2(this,5,3)">
+            </td>
+            <td>
+              <input id="value_defective" name="value_defective" type="text" type="number" maxlength="5" size="10" onkeyup="nextfeild2(this,5,2)">
+            </td>
+            <td>
+              <input id="created" name="created" type="text" size="20" value="2021-09-02 10:20:02" readonly="readonly">
+            </td>
+          </tr>
 					</tbody>
 					</table>
 				</div><br>
