--- a/barcode/sample.html
+++ b/barcode/sample.html
@@ -14,14 +14,12 @@
 <script type="text/javascript">
 // ----- lenに指定した桁数入力したら次項目へカーソル移動 ---------------------------------------------------------------
 function nextfeild2(str,len,timesEnterTab){
-  console.log('a: '+timesEnterTab);
   timesEnterTab=(timesEnterTab==null) ? 1 : timesEnterTab;
-  console.log('b: '+timesEnterTab);
 
 	if (str.value.length >= len) {
 	for (var i = 0, elm = str.form.elements; i < elm.length; i++) {
 		if (elm[i] == str) {
-			(elm[i + 1] || elm[0]).focus();
+			(elm[i + timesEnterTab] || elm[0]).focus();
 			break;}}}
 	return(str);
 }
