--- a/barcode/sample.html
+++ b/barcode/sample.html
@@ -16,16 +16,17 @@
 function nextfeild2(str,len,timesEnterTab){
   timesEnterTab=(timesEnterTab==null) ? 1 : timesEnterTab;
 
-	if (str.value.length >= len) {
-	for (var i = 0, elm = str.form.elements; i < elm.length; i++) {
-		if (elm[i] == str) {
-//		(elm[i + timesEnterTab] || elm[0]).focus();
-      if (elm[i + timesEnterTab]){
+  if (str.value.length >= len) {
+    for (var i = 0, elm = str.form.elements; i < elm.length; i++) {
+      if (elm[i] == str) {
+  //		(elm[i + timesEnterTab] || elm[0]).focus();
         setTimeout( function(){
-          $list.eq(index+1).focus();
+          (elm[i + timesEnterTab] || elm[0]).focus();
         } ,100)
+        break;
       }
-      break;}}}
+    }
+  }
 	return(str);
 }
 
